--- a/app/src/main/res/layout/frag_podcast.xml
+++ b/app/src/main/res/layout/frag_podcast.xml
@@ -2,8 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <com.ps.ted.components.SmartRecyclerView
         android:id="@+id/rv_podcast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <include
+        android:id="@+id/vp_empty_podcast"
+        layout="@layout/view_pod_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
