--- a/app/src/main/res/layout/frag_talk.xml
+++ b/app/src/main/res/layout/frag_talk.xml
@@ -3,8 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <com.ps.ted.components.SmartRecyclerView
         android:id="@+id/rv_talks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <include
+        android:id="@+id/vp_empty_talk"
+        layout="@layout/view_pod_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
